welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: not found: type decalage
litMessage():decalage
             ^